[gd_scene load_steps=3 format=3 uid="uid://b4l7rd3ehnkhi"]

[ext_resource type="Script" uid="uid://de7wpo3ir5m4n" path="res://mobile/mobile.gd" id="1_m1bpx"]
[ext_resource type="Texture2D" uid="uid://cv0mjkr8samim" path="res://assets/去除聊天框.png" id="4_8f28n"]

[node name="mobile" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_m1bpx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 876.0
offset_top = 155.0
offset_right = 978.0
offset_bottom = 248.0
text = "App1"

[node name="Button2" type="Button" parent="CanvasLayer"]
offset_left = 1008.0
offset_top = 154.0
offset_right = 1113.0
offset_bottom = 255.0
text = "App2"

[node name="Button3" type="Button" parent="CanvasLayer"]
offset_left = 1148.0
offset_top = 150.0
offset_right = 1255.0
offset_bottom = 256.0
text = "App3"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1075, 364)
scale = Vector2(0.610119, 0.558689)
texture = ExtResource("4_8f28n")

[node name="AppContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 889.0
offset_top = 46.0
offset_right = 1257.0
offset_bottom = 696.0

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Button3" to="." method="_on_button_3_pressed"]
